# telegram-course-bot

./: .gitignore  Cargo.toml  README.md  cards.md  flake.nix  graph  shell.nix  tasks.md
.github/workflows/: rust.yml
crates/course-graph/: Cargo.toml
crates/course-graph/src/: card.rs  deque.rs  graph.rs  lib.rs  main.rs  parsing.rs  progress_store.rs  utils.rs
crates/course-graph/src/parsing/: mod.rs  prototypes.rs
crates/telegram-bot/: Cargo.toml
crates/telegram-bot/src/: commands.rs  database.rs  handlers.rs  main.rs  state.rs
crates/telegram-bot/src/event_handler/: course.rs  ctx.rs  mod.rs  progress_store.rs
crates/telegram-bot/src/interaction_types/: card.rs  deque.rs  task.rs  telegram_interaction.rs
crates/telegram-bot/src/utils/: mod.rs
src/: commands.rs  handlers.rs  inline_keyboard.rs  main.rs  state.rs
src/event_handler/: mod.rs
src/interaction_types/: card.rs  deque.rs  mod.rs  telegram_interaction.rs
src/utils/: mod.rs
tasks/: france_capital.md
