[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.25"
pretty_env_logger = "0.5.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
rand = "0.9.0"

# teloxide = { version = "0.17.0", default-features = false, features = [
#     "rustls",
# ] }
teloxide-core = { version = "0.13.0", default-features = false, features = [
    "rustls",
] }

thiserror = "2.0.12"
dotenvy = "0.15.7"

course_graph = { path = "../course-graph" }
s_text_input_f = { git = "https://github.com/sineptic/ssr2" }
ssr-algorithms = { git = "https://github.com/sineptic/ssr2" }
chrono = "*"
fsrs = "2.0.4"
graphviz-rust.workspace = true
serde.workspace = true
dashmap = "6.1.0"
strip-ansi-escapes = "0.2.1"
url = "2.5.4"
anyhow = "1.0.99"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde_json = "1.0.143"
